Gulp from src to dist

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
    <link rel="shortcut icon" href="/src/icons/favicon.ico">
-   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-   <link rel="stylesheet" href="css/iconfont.css">
-   <link rel="stylesheet" href="css/fonts.css">
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/style.min.css">
    <title>UBER</title>
 </head>
 
@@ -171,9 +167,7 @@
                         <h4 class="reasons_head">Всегда большое количество заказов</h4>
                         <p class="reasons_text">Приложение показывает, где на данный момент больше всего заказов и
                            где
-                           действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры
-                           всегда
-                           приятные и абсолютно неконфликтные люди, которых приятно возить.</p>
+                           действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. </p>
                      </div>
                   </div>
                </div>
