--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,8 @@
             <div class="container">
                <div class="row">
                   <div class="col-6 col-md-4 offset-md-1 col-lg-3">
-                     <a href="#" class="subheader_logo"><img src="img/intro/uber_logo.png" alt="logo"></a>
+                     <a href="#" class="subheader_logo"><img src="img/intro/uber-logo.webp
+                        " alt="logo"></a>
                      <div class="subheader_official">Официальный партнер Uber в Москве</div>
                   </div>
                   <div class="xs-hidden col-md-3 offset-md-1 col-xl-3 offset-xl-2 tel_block">
@@ -41,7 +42,7 @@
                      <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
                   </div>
                   <div class="col-6 col-md-2 col-lg-2 book_call">
-                     <a href="tel:8 495 797 09 88" class="subheader_phone xs-visible">8 495 797 09 88</a>
+                     <a href="tel:84957970988" class="subheader_phone xs-visible">8 495 797 09 88</a>
                      <button class="subheader_btn">заказать звонок</button>
                   </div>
                </div>
@@ -69,8 +70,8 @@
       </section>
       <section class="reasons">
          <div class="container">
-            <div class="label">преимущества</div>
-            <h2 class="reasons_title title">8 причин начать работать с нами</h2>
+            <h2 class="label">преимущества</h2>
+            <div class="reasons_title title">8 причин начать работать с нами</div>
             <div class="row">
                <div class="col-md-6">
                   <div class="reasons_item">
@@ -207,7 +208,7 @@
       </section>
       <section class="mobile">
          <div class="container">
-            <div class="label">Возможности</div>
+            <h2 class="label">Возможности</h2>
             <div class="mobile_title title">мобильное приложение убер</div>
             <div class="mobile-subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой
                мобильный
@@ -254,11 +255,11 @@
       </section>
       <section class="choice">
          <div class="container">
-            <div class="choice_label label">Возможности</div>
+            <h2 class="choice_label label">Возможности</h2>
             <div class="choice_title title">Выбор - отличная штука!</div>
             <div class="choice_subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
             <div class="choice_img">
-               <img src="img/choice/car.png" alt="car">
+               <img src="img/choice/car.webp" alt="car">
             </div>
             <p class="bottom-image-text">Машины на каждый день. <br>Лучше, быстрее и дешевле, чем такси</p>
          </div>
@@ -266,7 +267,7 @@
       <hr>
       <section id="require" class="require">
          <div class="container">
-            <div class="require_label label">возможности</div>
+            <h2 class="require_label label">возможности</h2>
             <div class="require_title title">условия и требования</div>
             <div class="row">
                <div class="col-md-6">
@@ -327,7 +328,7 @@
       </section>
       <section class="world">
          <div class="container">
-            <div class="world-label label">города</div>
+            <h2 class="world-label label">города</h2>
             <div class="world-title title">По всему миру</div>
             <div class="world-subtitle">Мы в вашем городе и по всему миру</div>
          </div>
@@ -365,9 +366,9 @@
                </div>
             </div>
             <div class="footer_mobile">
-               <a href="#"><img class="footer-right-links" src="img/footer/App Store.jpg" alt="App Store"></a>
-               <a href="#"><img class="footer-right-links" src="img/footer/Google Play.jpg" alt="Google Play"></a>
-               <a href="#"><img class="footer-right-links" src="img/footer/Windows Store.jpg" alt="Windows Store"></a>
+               <a href="#"><img class="footer-right-links" src="img/footer/app-store.webp" alt="App Store"></a>
+               <a href="#"><img class="footer-right-links" src="img/footer/google-play.webp" alt="Google Play"></a>
+               <a href="#"><img class="footer-right-links" src="img/footer/windows-store.webp" alt="Windows Store"></a>
             </div>
          </div>
       </footer>
